# ftt-rs

./: Cargo.toml  LICENSE
.github/workflows/: build.yml
src/: define.rs  error.rs  generate.rs  lib.rs  main.rs  search.rs  simulate.rs
